fixed gallery overflow

--- a/lara/website/project.css
+++ b/lara/website/project.css
@@ -272,6 +272,13 @@ path {
 	margin-bottom: 1.5vh;
 }
 
+#gallery{
+	width: 100%;
+	height: 30vh;
+	overflow: auto;
+	margin-top: 1vh;
+}
+
 #conceptMap {
 	font: 12px sans-serif;
 	font-family: 'Raleway', sans-serif;
